[tool.poetry]
name = "wirebind"
version = "0.0.1"
description = "A networking library for distributed applications"
authors = ["Paul Butler <paul@driftingin.space>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cbor2 = "^5.4.6"
websockets = "^11.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
tox = "^4.5.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"

[tool.poetry.scripts]
wirebind = "wirebind.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
