[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["paul <paul@driftingin.space>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wirebind = { path = "../../../python", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
